tests/A2/reject/returnType3.ul
void main(){

}

boolean foo(){
    return;
}